# python_korneeva_006

./: pyproject.toml
flask_006/: db_schema.sql  flask_database.py  flaskapp.db  flaskapp.py  helpers.py  models.py
flask_006/admin/: admin.py  models.py
flask_006/admin/templates/admin/: login.html
flask_006/static/css/: style.css
flask_006/templates/: add_post.html  base.html  index.html  login.html  register.html  second.html
socket/: client.py  server.py
tests/: test_flask_006.py
